# magic-claw

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  feedback.json  magic.yaml.example  package-lock.json  package.json  plan-review.html  review.html  server.py  spec-feedback.json  spec-review.html
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  scorecard.yml
api/: openapi.yaml
benchmarks/: README.md
benchmarks/results/: README.md  v0.8.0-baseline.md
benchmarks/scenarios/: cost-tracking.md  durability.md  fanout.md  latency.md  throughput.md
benchmarks/scripts/: docker-compose.bench.yml  load.py  worker.py
blog/: 2026-03-23-why-magic.md
core/: .golangci.yml  go.mod  go.sum
core/benchmarks/: dispatcher_bench_test.go  events_test.go  registry_test.go  routing_test.go
deploy/: README.md  docker-compose.observability.yml
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
deploy/observability/: README.md
deploy/prometheus/: alerts.yaml  (+1 more)
docs-site/: index.md
scripts/: postinstall.js
sdk/python/: pyproject.toml
sdk/python/magic_ai_sdk/: __init__.py  client.py  embedded.py  protocol.py  worker.py
sdk/python/magic_claw/: __init__.py  client.py  decorators.py  protocol.py  worker.py
sdk/python/tests/: test_client.py  test_embedded.py  test_worker.py
site/: index.html
(+265 files in other folders)
