[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-claw"
version = "0.1.0"
description = "MagiC Python SDK — Build AI workers for the MagiC framework"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
