[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-ai-sdk"
version = "0.2.0"
description = "MagiC Python SDK — Build AI workers for the MagiC framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kien Bui", email = "kienbm@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/kienbui1995/magic"
Repository = "https://github.com/kienbui1995/magic"
Issues = "https://github.com/kienbui1995/magic/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 135

[tool.ruff.lint]
select = ["E", "F", "I"]
